--- a/app/stylesheets/main.scss
+++ b/app/stylesheets/main.scss
@@ -1,11 +1,5 @@
-@import "~foundation-sites/scss/foundation.scss";
-
-// Foundation
-@include foundation-grid;
-@include foundation-visibility-classes;
-
 // CSS Reset
-@import "./reset";
+@import './reset';
 
 // Computed styles
-@import "./styles/**/*";
+// @import './styles/**/*';
